# HelixAgent

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  COMPREHENSIVE_IMPLEMENTATION_PLAN.md  COMPREHENSIVE_STATUS_REPORT.md  IMPLEMENTATION_COMPLETE.md  MODELSDEV_COMPLETION_REPORT.md  Makefile  PROJECT_COMPLETION_REPORT.md  README.md  cloud_coverage.html  configure-analytics.sh  docker-compose.multi-provider.yaml  docker-compose.test.yml  docker-compose.yml  go.mod  go.sum  test_api.go  test_ensemble.go  test_multi_provider.sh  validate-deployment.sh  verify-deployment.sh
.github/workflows/: ci.yaml
Toolkit/: AGENTS.md  Makefile  README.md  go.mod  go.work
Toolkit/configs/: chutes-config.json
Toolkit/examples/: chutes_integration_demo.go  chutes_mock_demo.go  chutes_simple_demo.go
Upstreams/: GitHub.sh
Website/: build.sh
Website/public/: index.html
challenges/: .gitignore  FINAL_REPORT.md  README.md  Request_Challenges_Main.md
challenges/data/: challenges_bank.json
challenges/docs/: 06_MAIN_CHALLENGE.md  PHASE1_VERIFICATION_REPORT.md
challenges/master_results/: latest_summary.md  master_summary_20260104_165227.md  master_summary_20260104_165443.md  master_summary_20260104_165706.md  master_summary_20260104_165728.md  master_summary_20260104_170038.md  master_summary_20260104_170307.md  master_summary_20260105_203440.md  master_summary_20260105_213318.md  master_summary_20260105_214819.md  master_summary_20260105_215343.md  (+8 more)
configs/: development.yaml  multi-provider.yaml  production.yaml  test-multi-provider.yaml  verifier.yaml
docs/: AI_CODING_AGENT_COMPATIBILITY.md  CLI_AGENTS_TEST_DOCUMENTATION.md  COMPREHENSIVE_COMPLETION_PLAN.md  README.md  SINGLE_PROVIDER_DEBATE.md  api-documentation.md
scripts/: container-runtime.sh  run-integration-tests.sh  setup_siliconflow.sh
sdk/python/: README.md  pyproject.toml
sdk/python/superagent/: __init__.py  client.py  exceptions.py  types.py
sdk/python/tests/: __init__.py  test_client.py  test_exceptions.py  test_types.py
(+428 files in other folders)
